--- a/index.html
+++ b/index.html
@@ -2,5 +2,11 @@
 	<head></head>
 	<body>
 		<h2>Welcome to Bangalore</h2>
+		<h2>Welcome to Bangalore</h2>
+		<h2>Welcome to Bangalore</h2>
+		<h2>Welcome to Bangalore</h2>
+
+		<h2>Welcome to Bangalore</h2>
+		<h2>Welcome to Bangalore</h2>
 	</body>
 </html>
